--- a/basic.css
+++ b/basic.css
@@ -2,20 +2,17 @@ body {
 	background-color: black;
 }
 
-h1 {
+h1, h2, h3, p {
 	color: white;
-	font-size: 200%;
 }
 
+h1 {
+	font-size: 200%;
+}
 h2 {
-	color: white;
 	font-size: 170%;
 }
 
 h3 {
-	color: white;
 	font-size: 140%;
-}
-p {
-	color:white;
 }
