--- a/basic.css
+++ b/basic.css
@@ -70,6 +70,7 @@
 	padding-left:0px;
 	color: #dba9a1;
 	text-decoration: underline;
+	font-size:28px;
 }
 .sliderButtonContainer {
 	text-align: center;
